--- a/config/application.yml
+++ b/config/application.yml
@@ -2,6 +2,7 @@ defaults: &defaults
   app:
     name: Zollaria-Dev
     auth_redirect_url: http://apps.facebook.com/zollaria-dev/home/
+    auth_redirect_url_in_app: /home
   facebook:
     app_id: "392700677463970"
     app_secret: "ea40f3de763aed759dd88e23947fbf55"
@@ -21,6 +22,7 @@ production:
   app:
     name: Zollaria
     auth_redirect_url: http://apps.facebook.com/zollaria/home/
+    auth_redirect_url_in_app: /home
   facebook:
     app_id: "421010801275638"
     app_secret: "d1d761d4d3bd85b5d05e6e9a7f780776"
